<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	>
    <TextView 
        style="@style/textViewCalculator"	        
        android:background="@drawable/textlines"
        android:id="@+id/textOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:textColor="#000080"
        android:textStyle="bold"
        /> 
    <TextView     
        style="@style/textViewCalculator"	
        android:layout_marginBottom="10dp"                  
		android:background="@drawable/textlines"        
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_below="@+id/textOperation"  
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        />
    <LinearLayout
        android:id="@+id/threeFirstNumbers"
        android:layout_below="@+id/textResult"  
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >

	    <Button
        style="@style/buttonsCalculator"	        	        
	    android:text="@string/number1"
		android:background="@drawable/textlines"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:onClick="onBtnClickedNumber1"
	    />
	    <Button
        style="@style/buttonsCalculator"	        	        
	    android:text="@string/number2"
	    android:onClick="onBtnClickedNumber2"
	    />
	    <Button
        style="@style/buttonsCalculator"	        	        
	    android:text="@string/number3"
	    android:onClick="onBtnClickedNumber3"	    
	    />
	</LinearLayout>
	
	 <LinearLayout
	    android:id="@+id/threeMiddleNumbers"
	    android:layout_below="@+id/threeFirstNumbers"  
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:weightSum="3">
	    <Button
        style="@style/buttonsCalculator"	        	        
	    android:text="@string/number4"
	    android:onClick="onBtnClickedNumber4"	    
	    />
	    <Button
        style="@style/buttonsCalculator"	        	        
	    android:text="@string/number5"
	    android:onClick="onBtnClickedNumber5"	    
	    />
	    <Button
        style="@style/buttonsCalculator"	        	        
	    android:text="@string/number6"
	    android:onClick="onBtnClickedNumber6"	    
	    />
	</LinearLayout>
    <LinearLayout
	    android:id="@+id/threeTopNumbers"
	    android:layout_below="@+id/threeMiddleNumbers"  
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:weightSum="3">
	    <Button
        style="@style/buttonsCalculator"	        	        
	    android:text="@string/number7"
	    android:onClick="onBtnClickedNumber7"	    
	    />
	    <Button
        style="@style/buttonsCalculator"	        	        
	    android:text="@string/number8"
	    android:onClick="onBtnClickedNumber8"	    
	    />
	    <Button
        style="@style/buttonsCalculator"	        	        
	    android:text="@string/number9"
	    android:onClick="onBtnClickedNumber9"	    
	    />
	</LinearLayout>
    <LinearLayout
	    android:id="@+id/zeroNumber"
	    android:layout_below="@+id/threeTopNumbers"  
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:weightSum="3">
	    <Button
        style="@style/buttonsCalculator"	        	        
	    android:text="@string/dot"
	    android:onClick="onBtnClickedDot"	    
	    />
	    <Button
        style="@style/buttonsCalculator"	        	        
	    android:text="@string/number0"
	    android:onClick="onBtnClickedNumber0"	    
	    />
	    <Button
        style="@style/buttonsCalculator"	        	        
	    android:text="@string/delete"
	    android:onClick="onBtnClickedClear"	    
	    />
	</LinearLayout>

     <LinearLayout
	    android:id="@+id/scorelayout"
	    android:layout_below="@+id/zeroNumber"  
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:weightSum="3"
	    >
	    	    
	     <TextView
        android:id="@+id/textLabelScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:textSize="30sp"
	    android:layout_weight="1"        
        /> 
	     <TextView
        android:id="@+id/textScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
	    android:layout_weight="1"        
        /> 
    	<TextView
        android:id="@+id/textTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_weight="1"
        /> 
	</LinearLayout>
    	
</RelativeLayout>
  